# insurance_company_project

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.dvc/: config
data/processed/: .gitignore  X_test.parquet.dvc  insurance_company_cleaned_modified.csv.dvc  y_test.parquet.dvc
data/raw/: .gitignore  insurance_company_modified.csv.dvc
docs/: mkdocs.yml
docs/docs/: index.md
models/: .gitignore  model_xgb_final.pkl.dvc
notebooks/: Fase_1_Equipo58.ipynb  Fase_2_Equipo58.ipynb  Fase_3_Equipo58.ipynb
src/: config.py  dataset.py  eda.py  features.py  model.py  plots.py
src/api/: main.py  schemas.py  service.py  test_api.csv  test_api.py
src/modeling/: predict.py  train.py
tests/: test_data.py  test_integration.py  test_unit_features.py  test_unit_modeling.py
