[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "0.0.1"
description = "MLOPS project applied to Insurance Company Benchmark (COIL 2000) dataset"
authors = [
  { name = "team_58" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["src"]
force_sort_within_sections = true

[tool.pytest.ini_options]

# Define los "markers" (etiquetas) personalizados para evitar advertencias

markers = [

    "integration: marca las pruebas de integración (lentas, requieren datos reales)",

]
